OSC: Small alignment fix for 6-cols https://basecamp.com/1805934/projects/665129-nurun-sony-global/todos/30849281-design-edit

--- a/src/css/scss/modules/sony_one_carousel.scss
+++ b/src/css/scss/modules/sony_one_carousel.scss
@@ -803,7 +803,7 @@
         }
 
         &.content-6 {
-          top: 5.8%;
+          top: 8%;
           left: 8.6%;
         }
 
